features/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: syncthing
  name: syncthing
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      - image: lscr.io/linuxserver/syncthing:2.0.15@sha256:c96968aeee90168a7bac16a05deb9265de745a4cfa127afb3c8f31079c5eba17
        name: syncthing
        ports:
        - containerPort: 8384
        - containerPort: 22000
        volumeMounts:
        - name: datadir
          mountPath: /config
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: syncthing-pvc
